syntax = "proto3";

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";

option go_package = "personalfinance/generated/proto";

message GetBanksRequest {
  string countryCode = 1;
}

message GetBanksResponse {
  repeated BankResponse banks = 1;
}
message BankResponse {
  string id = 1;
  string name = 2;
  string iconURL = 3;
}

message CreateRequisitionRequest {
  string institutionId = 1;
}
message CreateRequisitionResponse {
  string url = 1;
}

message HandleRequisitionRequest {
  string requisitionReference = 1;
}
message HandleRequisitionResponse {
}

message GetBankAccountsRequest {
  string requisitionReference = 1;
}
message GetBankAccountsResponse {
  repeated BankAccountResponse accounts = 1;
}
message BankAccountResponse {
  string id = 1;
  string iban = 2;
  string bankName = 3;
  string iconURL =4 ;
}
