syntax = "proto3";
import "banking.proto";
import "user.proto";

option go_package = "personalfinance/generated/proto";

message Empty { }

service BankingService {
  rpc GetBanks(GetBanksRequest) returns (GetBanksResponse);
  rpc CreateRequisition(CreateRequisitionRequest) returns (CreateRequisitionResponse);
  rpc GetTransactions(GetTransactionsRequest) returns (GetTransactionsResponse);
}

service UserService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
}
